--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 # Sets the minimum version of CMake required to build the native library.
 
-cmake_minimum_required(VERSION 3.4.1)
+cmake_minimum_required(VERSION 3.6.0)
 
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
@@ -34,10 +34,39 @@ find_library( # Sets the name of the path variable.
 
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
+
+
 add_library(avcodec SHARED IMPORTED)
 set_target_properties( avcodec
         PROPERTIES
-        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/armeabi-v7a/libavcodec.so)
+        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavcodec.so)
+
+
+add_library(avfilter SHARED IMPORTED)
+set_target_properties( avfilter
+        PROPERTIES
+        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavfilter.so)
+
+add_library(avformat SHARED IMPORTED)
+set_target_properties( avformat
+        PROPERTIES
+        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavformat.so)
+
+add_library(avutil SHARED IMPORTED)
+set_target_properties( avutil
+        PROPERTIES
+        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavutil.so)
+
+add_library(swresample SHARED IMPORTED)
+set_target_properties( swresample
+        PROPERTIES
+        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libswresample.so)
+
+add_library(swscale SHARED IMPORTED)
+set_target_properties( swscale
+        PROPERTIES
+        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libswscale.so)
+
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
@@ -46,6 +75,11 @@ set_target_properties( avcodec
 target_link_libraries( # Specifies the target library.
         iffmpeg
         avcodec
+        avfilter
+        avformat
+        avutil
+        swresample
+        swscale
         # Links the target library to the log library
         # included in the NDK.
         ${log-lib})
