--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -4,6 +4,8 @@
 # Sets the minimum version of CMake required to build the native library.
 
 cmake_minimum_required(VERSION 3.6.0)
+set(CMAKE_VERBOSE_MAKEFILE on)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
 
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
@@ -17,7 +19,7 @@ add_library( # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        native-lib.cpp)
+        native-lib.cpp SampleMuxing.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -38,33 +40,33 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 
 
 add_library(avcodec SHARED IMPORTED)
-set_target_properties( avcodec
+set_target_properties(avcodec
         PROPERTIES
         IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavcodec.so)
 
 
 add_library(avfilter SHARED IMPORTED)
-set_target_properties( avfilter
+set_target_properties(avfilter
         PROPERTIES
         IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavfilter.so)
 
 add_library(avformat SHARED IMPORTED)
-set_target_properties( avformat
+set_target_properties(avformat
         PROPERTIES
         IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavformat.so)
 
 add_library(avutil SHARED IMPORTED)
-set_target_properties( avutil
+set_target_properties(avutil
         PROPERTIES
         IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavutil.so)
 
 add_library(swresample SHARED IMPORTED)
-set_target_properties( swresample
+set_target_properties(swresample
         PROPERTIES
         IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libswresample.so)
 
 add_library(swscale SHARED IMPORTED)
-set_target_properties( swscale
+set_target_properties(swscale
         PROPERTIES
         IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libswscale.so)
 
